--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "Test-Amon2-Web"
-# badges = ["travis"]
+badges = ["travis", "coveralls"]
 authority="cpan:KARUPA"
 
 module_maker="ModuleBuildTiny"
